--- a/components/columnArea/columnArea--tr50.css
+++ b/components/columnArea/columnArea--tr50.css
@@ -28,7 +28,6 @@
   @include container;
   margin-bottom: rem(50);
   order: 2;
-  width: calc((100vw/12*12) + 1.25rem); /* The tidy span calc does not work as expected with the dual-sided bleed. */
 
   @media ($mdMin) {
     margin-bottom: 0;
